tests/ui-fulldeps/rustc-dev-remap.only-remap.stderr
error[E0277]: the trait bound `NotAValidResultType: VisitorResult` is not satisfied
  --> $DIR/rustc-dev-remap.rs:LL:COL
   |
LL |     type Result = NotAValidResultType;
   |                   ^^^^^^^^^^^^^^^^^^^ the trait `VisitorResult` is not implemented for `NotAValidResultType`
   |
   = help: the following other types implement trait `VisitorResult`:
             ()
             ControlFlow<T>
note: required by a bound in `rustc_ast::visit::Visitor::Result`
  --> /rustc-dev/xyz/compiler/rustc_ast/src/visit.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
